<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.QuizActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="64dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/begin_quiz"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/q1_how_many_legs_does_an_octopus_have"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <RadioGroup
                android:id="@+id/rg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/_6" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/_7" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/_8" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/_9" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/q2_which_of_these_are_mammals"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="12dp"
                android:text="@string/bat" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="@string/shark" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="@string/eagle" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/mcb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="@string/dolphin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/q3_which_of_these_languages_cannot_be_used_to_develop_android_apps"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <!--<com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/answer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etQ3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage" />

            </com.google.android.material.textfield.TextInputLayout>-->

            <RadioGroup
                android:id="@+id/rg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/kotlin" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/xamarin" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/go" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/dart" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/q4_which_of_the_following_operating_systems_is_produced_by_ibm"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <RadioGroup
                android:id="@+id/rg3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/os_2" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/windows" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/dos" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/linux" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/q5_pa_is_the_unit_for"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <RadioGroup
                android:id="@+id/rg4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/conductivity" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/frequency" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/thrust" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/pressure" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lavConfetti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_fileName="confetti.json" />

</androidx.constraintlayout.widget.ConstraintLayout>